# markdown-db

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  rust-toolchain.toml  rustfmt.toml
src/: index.rs  main.rs  markdown.rs  obsidian.rs  test.rs
src/markdown/: collection.rs  source.rs
