[package]
name = "markdown-db"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indoc = "1.0"
comrak = "0.15.0"
rusqlite = { version = "0.28.0", features = ["bundled-full"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.14"
serde_json = "1.0.68"
sha2 = "0.10.6"
clap = { version = "4.0.29", features = ["derive", "env"] }
assert_cmd = "2.0.6"
walkdir = "2.3.2"
chrono = {version = "0.4.19", features = ["serde"] }
tempfile = "3.2.0"
log = "0.4"
void = "1"
urlencoding = "2"
lazy_static = "1.4.0"
directories = "4"
once_cell = "1.8.0"
regex = "1"
similar-asserts = "1.4.2"
url = "2.3"
base64 = "0.21.0"
